draft of most of the discussion section

--- a/ccs/discussion.tex
+++ b/ccs/discussion.tex
@@ -1,22 +1,57 @@
 \section{Discussion}
 \label{sec:discussion}
 
+In this section, we discuss the various technical, political, and legal limitations
+of OCD, as well as possible avenues for future work. 
+
+\paragraph{CDNs operated by content hosts.} The design of \system{}
+assumes that the entities operating the proxies and delivering content are
+distinct from original content provider. In many cases, however---particularly
+for large content providers such as Netflix, Facebook, and Google---the
+content provider operates their own CDN cache nodes; in these cases, \system{} will
+not be able to obfuscate the content from the CDN operator, since the content host
+and the CDN are the same party.  Similarly, because the CDN operator is the same
+entity as the original server, it also knows the keys that are shared with the clients.
+As a result, the CDN cache nodes could also discover the keys and identify both
+the content, as well as which clients are requesting which content.
+
+\paragraph{Better mixing with proxy selection.} In the current implementation of
+\system{}, a client's requests are all directed through the same \system{} proxy.
+Instead, a client could use a proxy autoconfiguration (PAC) file, which could direct
+requests through different proxies depending on characteristics such as which URL
+is being requested. The selection of proxies might even be randomized.  Randomizing
+the proxy that serves a particular client request ensures that no single proxy knows
+all of the requests that any particular client is making; additionally, it may make
+it more difficult for a CDN to identify the group of requests coming from a single
+client, since a client's requests would mixed among multiple proxies. 
+
+\paragraph{Chosen plaintext attacks.} A CDN operator could attempt to
+determine whether a particular URL was being accessed by sending requests
+through specific \system{} proxies and observing the corresponding obfuscated
+requests and responses in the CDN cache logs. Blinding the clients' requests
+with a random nonce that is added by the proxy should prevent against this
+attack. We also believe that such an attack reflects a stronger attack: from a
+law enforcement perspective, receiving a subpoena for {\em existing} logs and
+data may present a lower legal barrier than compelling a CDN to attack a
+system.
+
+\paragraph{Defending against spoofed content updates.} Because the CDN cache
+nodes do not know either the content that they are hosting or the URLs
+corresponding to the content, an attacker could masquerade as an origin server
+and could potentially push bogus content for a URL to a cache node. There are
+a number of defenses against this possible attack. This simplest solution is
+for CDN cache nodes to authenticate origin servers and only accept updates
+from trusted origins; this approach is plausible, since many origin servers already
+have a corresponding public key certificate through the web PKI hierarchy.  An additional
+defense is to make it difficult for to discover which obfuscated URLs correspond
+to which content that an attacker wishes to spoof; this is achievable by design.
+A third defense would be to only accept updates for content from the same origin
+server that populated the cache with the original content.
+
 \subsection{Political Push Back}
 
-\subsection{Law Enforcement}
-
-\subsection{Private CDNs}
-Such as Netflix, Facebook, Google --- \system{} doesn't work for them because they are the content publisher {\it and} the CDN.
-
-\subsection{Proxy Selection}
-To provide more mixing than the proxy already provides, 
-the proxy that is used could be selected based 
-on a Proxy Auto Configuration (PAC) file.
-
-\subsection{Active Measurements + Overreaching Subpoena}
-
-\paragraph{Spoofing origin server content updates.}
-An attacker who spoofs origin server content updates.
+%\subsection{Law Enforcement}
+%\subsection{Active Measurements + Overreaching Subpoena}
 
 \paragraph{Guessing attacks.}
 An attacker who is attempting to learn if a client is accessing a specific URL or not by submitting requests to see if they match other clients' requests (this should be fixed by adding blinding).
