--- a/ccs/performance.tex
+++ b/ccs/performance.tex
@@ -23,19 +23,19 @@ As content publishers must compute the HMAC$_k$(URL) and \{content\}$_k$, the ac
 takes longer than not having to perform any cryptographic operations.  In this experiment, we analyze the overhead 
 the publisher faces when obfuscating her content.\\
 
-{\bf Metrics}
+\paragraph{Metrics}
 When comparing the time to publish using \system{} to a typical CDN, the only difference is the obfuscation of 
 data (as discussed in Section \ref{sec:publish_protocol}).  This results in our analysis simply of the 
 obfuscation; the metric of interest is the total time it takes to encrypt content.  \\
 
-{\bf Experimental Setup}
+\paragraph{Experimental Setup}
 In our experiment, we setup a client, a proxy, and an edge server. For this experiment, the only machine necessary is 
 the edge server --- we are not concerned with the amount of time it takes for the content to be transmitted from 
 the publisher's origin server to the edge server, only the amount of time the content publisher takes to obfuscate the data.  Therefore, 
 the content and URL are obfuscated on the edge server, and the time it takes to do these operations is measured.  This 
 measurement is taken for obfuscating the following file sizes: .000001MB, .001MB, .01MB, .1MB, 1.0MB, 10.0MB, and 100.0MB. \\
 
-{\bf Results}
+\paragraph{Results}
 The results of time to obfuscate data are shown in Figure \ref{fig:encrypt_time}.  We can see that the overhead 
 is relatively small for file sizes less than 100.0MB.  In addition, this publishing overhead has no performance impact 
 on a client's experience of retrieving, as the client never has to encrypt the content.  
@@ -51,11 +51,11 @@ on a client's experience of retrieving, as the client never has to encrypt the c
 There is also some overhead associated with retrieving objects when using \system{} due to the operations that 
 the proxy must perform.  \\
 
-{\bf Metrics}
+\paragraph{Metrics}
 We are interested in measuring the affect of cryptographic functions on the retrieval of single 
 objects.  The metric used to do so is the end-to-end time to download a single object.  \\
 
-{\bf Experimental Setup}
+\paragraph{Experimental Setup}
 In our experiment, we setup a client, a proxy, and an edge server.  The client is a  Fujitsu CX2570 M2 servers with dual, 
 14-core 2.4GHz Intel Xeon E5 2680 v4 processors with 384GB RAM running the Springdale distribution of Linux machine, 
 and both the proxy and edge servers are VPSs running Ubuntu 12.04 x64 LTS with 10GB of storage. The proxy is located in 
@@ -81,7 +81,7 @@ and to measure the transfer time.  \\
 \label{fig:transfer}
 \end{figure}
 
-{\bf Results}
+\paragraph{Results}
 After conducting the experiment, we find the results shown in Figure \ref{fig:transfer}.  We can see that total download times are comparable 
 for objects that are smaller than 10MB; objects larger than 10MB take slightly longer to download using \system{} than a traditional CDN, 
 due to the cryptographic operations performed at the proxy.  
@@ -96,19 +96,19 @@ of proxies use a different shared key, and these proxies can only request the co
 This would cause the CDN to fetch the object from the content publisher's server, which increases the latency, and degrades performance for the client.  
 In this experiment, we measure just how much of an impact the number of shared keys has on the cache hit rate.\\
 
-{\bf Metrics}
+\paragraph{Metrics}
 In addition to the use of proxies and cryptographic operations, \system{} could suffer performance losses from lower cache hit ratios.  As the number 
 of shared keys (between the proxies and the content publishers' servers) increases, the cache hit ratio will likely decrease.  The metric we are interested 
 in to evaluate the performance impact of multiple shared keys is the cache hit ratio.\\
 
-{\bf Experimental Setup}
+\paragraph{Experimental Setup}
 In this experiment, we simulate the cache hit rate with a fixed number of clients while varying the number of shared keys $k$.  We use 
 access logs from prior research~\cite{andersen2005improving} to simulate cache requests, and we assume a cache size of 1.2 GB~\cite{berger2017adaptsize} and that all objects have 
 the same size of 12 KB~\cite{berger2016achieving}.  The experiment starts with a cold cache, five clients, and a single shared key; this is 
 replicated five times, where we increase the number of shared keys by one each time, resulting in an analysis of how the cache hit rate is affected 
 by values of $1~<=~k~<= 5$.
 
-{\bf Results}
+\paragraph{Results}
 Our results from this experiment are shown in Figure \ref{fig:cache_hits}.  We can see that cache hit rates decrease 
 as the number of shared keys increase.  Interestingly, for larger numbers of $k$ the difference between $k-1$ keys and $k$ is less than for larger 
 values of $k$; therefore, for larger values of $k$ there is greater security with a relatively low performance trade off.
