--- a/ccs/threat_model.tex
+++ b/ccs/threat_model.tex
@@ -39,7 +39,7 @@ can be protected by preventing CDNs from learning information, decoupling conten
 maintaining the performance benefits of a CDN while reducing the probability of attacks.  Our design goals are listed in Table \ref{tab:design_goals}, 
 and we further discuss our design decisions in Section \ref{sec:design}.
 
-\begin{table*}[h]
+\begin{table*}[t!]
 \centering
 \begin{tabular}{| l | l |} 
  \hline
