--- a/ccs/sigproc.bib
+++ b/ccs/sigproc.bib
@@ -19,6 +19,12 @@
   publisher={IEEE}
 }
 
+@misc{google_warrant,
+  title = "{Google must turn over foreign-stored emails pursuant to a warrant, court rules}",
+  key = "Google",
+  howpublished = {\url{https://www.washingtonpost.com/news/volokh-conspiracy/wp/2017/02/03/google-must-turn-over-foreign-stored-e-mails-pursuant-to-a-warrant-court-rules/?utm_term=.d05722b3773f}}
+}
+
 @inproceedings{andersen2005improving,
   title={Improving web availability for clients with MONET},
   author={Andersen, David G and Balakrishnan, Hari and Kaashoek, M Frans and Rao, Rohit N},
