updated more figures/plots

--- a/ccs/design.tex
+++ b/ccs/design.tex
@@ -117,10 +117,10 @@ The resulting system is the basis of \system{}, and the high-level view of the s
 which can be compared to what CDNs look like today (Figure \ref{fig:basic_cdn}).  The next section describes \system{} in more 
 detail and outlines the specific steps for publishing and retrieving content.
 
-\begin{figure}[t]
+\begin{figure*}[t]
 \centering
-\includegraphics[width=.5\textwidth]{full_ocd_system}
+\includegraphics[width=.9\textwidth]{full_ocd_system}
 \caption{The relationships between clients, the CDN, proxies, and content publishers in 
 \system{}.}
 \label{fig:ocd_overview}
-\end{figure}
+\end{figure*}
