--- a/ccs/performance.tex
+++ b/ccs/performance.tex
@@ -119,7 +119,7 @@ values of $k$; therefore, for larger values of $k$ there is greater security wit
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=.5\textwidth]{cache_hit_rate.pdf}
+\includegraphics[width=.45\textwidth]{cache_hit_rate.png}
 \caption{The cache hit rate for different numbers of shared keys.}
 \label{fig:cache_hits}
 \end{figure}
