remove gratuitous header

--- a/ccs/paper.tex
+++ b/ccs/paper.tex
@@ -27,6 +27,7 @@
 \acmISBN{123-4567-24-567/08/06}
 
 %Conference
+\acmConference[]{}
 %\acmConference[WOODSTOCK'97]{ACM Woodstock conference}{July 1997}{El
 %  Paso, Texas USA} 
 %\acmYear{1997}
