--- a/ccs/abstract.tex
+++ b/ccs/abstract.tex
@@ -1,6 +1,8 @@
 \begin{abstract} Recent episodes of governments' attempts to access user data
-have drawn increased concern to where a user's data is located. The location
-of a user's data  can affect which governing authorities can access it.
+have drawn increased concern to where data belonging to or about a user (including
+a user's access patterns) is located.
+The location of user data  can affect which governing authorities can access
+it.
 Because Content Distribution Networks (CDNs) can cache content in many
 different countries, often without regard to the owner of the data, a user's data
 may reside in a country that differs from their own. Many  battles over stored
